[package]
name = "vulkan-hdr-bridge"
version = "0.1.0"
edition = "2024"

[lib]
name       = "vk_hdr_bridge"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.9"
libc = "0.2.182"
log = "0.4.29"
once_cell = "1.21.3"
rayon = "1.11.0"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto       = "fat"
strip = true
codegen-units = 1

